fix css import to be compiled in library

--- a/projects/harvest/ng-perfect-scrollbar/src/lib/perfect-scrollbar.component.scss
+++ b/projects/harvest/ng-perfect-scrollbar/src/lib/perfect-scrollbar.component.scss
@@ -1,4 +1,4 @@
-@import url('perfect-scrollbar/css/perfect-scrollbar.css');
+@import 'perfect-scrollbar/css/perfect-scrollbar.css';
 
 /*
   TODO: Remove important flags after this bug if fixed:
